[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cogrib"
authors = [{name = "Tom Augspurger", email = "taugspurger@microsoft.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = [
    "requests",
    "xarray",
    "cfgrib>=0.9.10.0",
    "eccodes",
    "numpy",
    "zarr",
]

[project.optional-dependencies]
test = [
    "pytest",
    "docker",
    "azure-storage-blob",
]

[project.urls]
Home = "https://github.com/TomAugspurger/cogrib"
